--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bleach==3.0.2
 blinker==1.4
 Click==7.0
 dominate==2.3.4
+elasticsearch==6.3.1
 Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
@@ -12,9 +13,11 @@ Flask-Moment==0.6.0
 Flask-PageDown==0.2.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-SSLify==0.1.5
+Flask-WhooshAlchemy==0.56
 Flask-WhooshAlchemyPlus==0.7.5
 Flask-WTF==0.14.2
-ForgeryPy==0.1
+gunicorn==19.9.0
 itsdangerous==0.24
 jieba==0.39
 Jinja2==2.10
@@ -22,6 +25,7 @@ Mako==1.0.7
 Markdown==3.0.1
 MarkupSafe==1.0
 Pillow==5.3.0
+psycopg2==2.7.5
 python-dateutil==2.7.3
 python-editor==1.0.3
 six==1.11.0
